--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <input type="text" id="input-el">
-    <button id="input-btn" onclick="saveBtn()">SAVE</button>
+    <button id="input-btn">SAVE</button>
     <script src="index.js"></script>
+    
 </body>
 </html>
