--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Chrome Extension</title>
 </head>
 <body>
-    <input type="text" id="input-el">
+    <input type="text" id="input-el" placeholder="www.facebook.com">
     <button id="input-btn">SAVE</button>
+    <ul id="ul-el"></ul>
+    <div id="container-el">
+    </div>
     <script src="index.js"></script>
     
 </body>
