--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <input type="text" id="input-el" placeholder="www.facebook.com">
     <button id="input-btn">SAVE</button>
+    <button id="save-btn">SAVE TAB</button>
     <button id="delete-btn">DELETE</button>
     <ul id="ul-el"></ul>
     <div id="container-el">
